# sirixsh

./: Cargo.toml  README.md
src/: main.rs
src/http/: database.rs  error.rs  format.rs  mod.rs  resource.rs  sirix.rs  types.rs
src/parsers/: context.rs  delete.rs  info.rs  mod.rs  read.rs
